# BrightEyes-FLISM

./: README.md  RELEASING.md  requirements.txt  setup.cfg
.github/workflows/: release.yml
example notebooks/: APR_Fit.ipynb  APR_FitWorkflow.ipynb  APR_PhasorWorkflow.ipynb  APR_Phasors.ipynb  APR_Reassignment.ipynb  APR_only.ipynb  CLSM_Fit.ipynb  CLSM_Phasors.ipynb  Convallaria Fit 05052025.ipynb  Convallaria Phasor 05052025.ipynb  Coumarine Fit 05052025.ipynb  Coumarine Phasor 05052025.ipynb  Giuse Phasor copy.ipynb  LaminaTubolin Fit Biexponential copy.ipynb  LaminaTubolin Fit Biexponential.ipynb  LaminaTubolin Fit.ipynb  LaminaTubolin Phasor.ipynb  LaminaTubolin_fit_UNFINISHED.ipynb  LaminaTubolin_phasor.ipynb  Reconstruction_lifetime.ipynb  Reconstruction_lifetime_fit.ipynb  Reconstruction_lifetime_phasor.ipynb  S2ISM_Fit.ipynb  S2ISM_Phasors.ipynb  S2ISM_only.ipynb  run_all.sh  test.ipynb
example notebooks/executed/: APR_Phasors.ipynb
example notebooks/old notebooks/old/FDB/: APR_FLISM_Convallaria.ipynb  Convallaria_29_07_2024-Copy1.ipynb  Convallaria_lifetime_example.ipynb  (+2 more)
example notebooks/old/FDB/: APR_FLISM_Convallaria.ipynb  Convallaria_lifetime_example.ipynb  Example_Convallaria_TTM_acquisition.ipynb  Lamina_and_Tubulin_DFD.ipynb  S^ISM.ipynb
example notebooks/old/test/: Test class alignment data.ipynb  Test fit_data_with_ref_or_irf.ipynb
src/brighteyes_flim/: __init__.py  _fit_maps.py  flism_data.py  graph_tools.py  h5_data_calibrator.py  tools_phasor.py
src/brighteyes_flism/: __init__.py  _fit_maps.py  flism_data.py  tools_phasor.py
(+2 files in other folders)
