[metadata]
name = brighteyes-flism
version = 0.10.6
author = Mattia Donato
author_email = mattia.donato@iit.it
url = https://github.com/VicidominiLab/brighteyes-flism
description = A toolbox for analysing FLISM images
license = GPL-3.0-or-later
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/VicidominiLab/brighteyes-flism/issues
    Documentation = https://brighteyes-flism.readthedocs.io
    Source Code = https://github.com/VicidominiLab/brighteyes-flism
    User Support = https://github.com/VicidominiLab/brighteyes-flism/issues



[options]
packages = find:
include_package_data = True
python_requires = >=3.9
zip_safe = False
package_dir =
    =src

# add your package requirements here
install_requires =
    brighteyes-mcs-file>=0.2.5
    h5py
    joblib
    matplotlib
    numpy
    scipy
    scikit-image
    tqdm


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.extras_require]
ism =
    brighteyes-ism>=1.4.3
